Bug 136144 - False warning arises when trying to export a document as PDF.
Summary: False warning arises when trying to export a document as PDF.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Ivan
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-26 11:20 UTC by Ivan
Modified: 2020-10-24 18:25 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
An example where the bug can be caught. (9.64 KB, application/vnd.oasis.opendocument.text)
2020-08-26 11:20 UTC, Ivan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ivan 2020-08-26 11:20:05 UTC
Created attachment 164710 [details]
An example where the bug can be caught.

Warning "Text contrast is too low" arises when trying to export a document containing a hyperlink with "Universal Accessibility (PDF/UA)" as PDF, despite the text is contrast enough.
Comment 1 Commit Notification 2020-08-28 11:21:57 UTC
Ivan Stefanenko committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/061394b6dfb8b2bcf6a2d4485751eb7443a8c081

tdf#136144: Initialize background colors to COL_AUTO

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.