tdf#136144: Initialize background colors to COL_AUTO

Default ctor initializes the colors to black. This is incorrect, since
in case of absent explicit setting, the actual background color is
white. Using COL_AUTO activated the proper fallback mechanism
to the default WHITE.
Change-Id: Iddc39032f041adc4d419a54b3142b87d4447fb31